# StuyHacks9

./: README.md
STUYHACKS9/: Database  main.py  pyproject.toml  seed.json
STUYHACKS9/backend/: models.py  steven.py  takephoto.py  write.py
STUYHACKS9/planning/: design.md
STUYHACKS9/static/: autocomplete.js  cities.js  city.css  items.js  new-style.css  script.js
STUYHACKS9/templates/: _navbar.html  about.html  get_user_location.html  index.html  leaderboard.html  login.html  map.html  not_found.html  play.html  product.html  test.html
