[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["jasonjiangstuy <jasonjiangny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
opencv-python = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
